# sgmse

./: .gitignore  LICENSE  MACOS_SETUP.md  README.md  __paths__.py  calc_metrics.py  download_official_samples.py  download_test_data.py  enhancement.py  eval.py  eval_methods.py  evaluation.py  experiment_reverse_steps.py  fix_cuda_issue.py  job1.sh  pyproject.toml  requirements.txt  requirements_version.txt  run_enhancement_macos.py  run_experiment.py  run_experiment_fixed.py  setup_experiment.sh  test.py  train.py  utils.py  visualize_results.py
.environment/share/jupyter/labextensions/jupyter-matplotlib/: package.json
.environment/share/jupyter/labextensions/jupyter-matplotlib/static/: 108.d9eb8880b5c7dde42011.js  480.2f50a11ae4aea5769047.js  486.a990865715734ae8b8aa.js  686.249045c4283cdf28b0e5.js  remoteEntry.0a859bd5f4f46047146d.js  third-party-licenses.json
.environment/share/jupyter/nbextensions/jupyter-matplotlib/: index.js  index.js.map
experiments/: experiment_snr.py  reverse_steps.ipynb  snr.ipynb
preprocessing/: create_data.py  create_dns_chime3.py  create_wsj0_chime3.py  create_wsj0_qut.py  create_wsj0_reverb.py  prepare_dns_clean_speech.py  utils.py
sgmse/: data_module.py  model.py  sdes.py
sgmse/backbones/: __init__.py  dcunet.py  ncsnpp.py  ncsnpp_48k.py  ncsnpp_v2.py  shared.py
sgmse/backbones/ncsnpp_utils/: utils.py
sgmse/backbones/ncsnpp_utils/op/: __init__.py  upfirdn2d_native.py
sgmse/sampling/: __init__.py  correctors.py  predictors.py
sgmse/util/: inference.py  other.py  tensors.py  validation_tools.py
